--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
     </noscript>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <!--I added the time and date so that Users Know the date and time when they visit our Web App-->
       <footer>
         <section class="about-section text-center text-white-50" id="about">
             <div class="container">
