Started to design the frontend add pictures, re-position the graph, etc. Plus get rid some of our 304 routes.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,11 +16,11 @@
     <script type="module" src="/src/main.js"></script>
     <!--I added the time and date so that Users Know the date and time when they visit our Web App-->
       <footer>
-        <section class="about-section text-center text-white-50" id="about">
+        <section class="bg-gray-300 about-section text-center text-white-100" id="about">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <p class="text-white-150">
+                        <p class="text-black-500">
                         <script type="text/javascript">
                         var today = new Date();
                         var day = today.getDay();
