Was getting after making chart more visible/pretty Also put down an idea on how to do our error message to be visible.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,6 +17,7 @@
     <!--I added the time and date so that Users Know the date and time when they visit our Web App-->
       <footer>
         <section class="bg-gray-300 about-section text-center text-white-100" id="about">
+          <div class="flex flex-col col-span-2">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
@@ -47,6 +48,7 @@
                     </div>
                 </div>
             </div>
+          </div>
         </section>
       </footer>
   </body>
